--- a/styles/style.css
+++ b/styles/style.css
@@ -1,19 +1,3 @@
-.header {
-  background-color: rgb(142, 217, 192);
-  position: relative;
-  width: auto;
-  height: 300px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.header__content img {
-  max-width: 300px;
-  max-height: 350px;
-  height: auto;
-  width: auto;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -30,6 +14,22 @@ a {
 
 ul {
   list-style-type: none;
+}
+
+.header {
+  background-color: rgb(142, 217, 192);
+  position: relative;
+  width: auto;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header__content img {
+  max-width: 300px;
+  max-height: 350px;
+  height: auto;
+  width: auto;
 }
 
 .header {
@@ -56,6 +56,19 @@ ul {
   grid-template-columns: 1fr;
   grid-template-rows: repeat(4, auto);
   grid-template-areas: "header" "nav" "principal" "footer";
+}
+
+.content__navbar {
+  display: flex;
+  justify-content: center;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.content__navbar li a {
+  color: black;
+  font-weight: bold;
+  padding: 5px;
+  display: block;
 }
 
 .menu {
