Mejora Final SEO y SASS

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,5 +1,5 @@
 .header{
-    background-color: rgb(142, 217, 192);
+    background-color: $color-principal;
     position:relative;
     width: auto;
     height: 300px;
